# pi-trajectory-overlay-CLIENT

./: .gitignore  .gitmodules  MPC_OVERNIGHT_V3_SUMMARY.md  MPC_OVERNIGHT_V4_SUMMARY.md  MPC_OVERNIGHT_V5_SUMMARY.md  MPC_OVERNIGHT_V6_SUMMARY.md  OVERLAY_V2_FINAL_REPORT.md  README.md  batch_evaluate.py  generate_examples.py  inference_visualizer.py  main.py  main_mpc.py  main_pi05.py  requirements.txt  run_laptop.sh  start_policy_server.sh  traj_vis_utils.py  trajectory_predictor.py  trajectory_source.py
calibration/: calibration_info.json
mpc_overlay/: __init__.py  franka_fk.py  mpc.py  trajectory_cost.py
mpc_overlay/tests/: test_arbitration_and_trust_region.py  test_franka_fk.py  test_mpc.py  test_progress_aware_arrow.py  test_progress_reward.py  test_trajectory_cost.py
simulator/: README.md  main_robolab.py  main_robolab_overlay.py  mpc_sim_adapter.py  pyproject.toml  validate_projection.py
simulator/tests/: conftest.py  live_server_probe.py  test_jointvel_deep.py  test_main_robolab.py  test_parity_with_upstream.py
tests/: test_camera_calibration.py  test_extract_observation.py  test_image_pipeline.py  test_ipv4_patch.py  test_llm_apis_real.py  test_load_extrinsics.py  test_main.py  test_plan_once_merge.py  test_stack_geometry_complete.py  test_traj_vis_utils.py  test_trajectory_predictor.py
tools/: annotate_fk.py
